Slides update ML

--- a/lectures/22_regression_discontinuity_3.tex
+++ b/lectures/22_regression_discontinuity_3.tex
@@ -445,10 +445,10 @@
       \end{column}%
       \hfill%
       \begin{column}{.7\textwidth}
-        \only<1->{\includegraphics[width=\linewidth]{images/rdplot_lee.png}}
-        \only<2->{\includegraphics[width=\linewidth]{images/rdrobust_est_lee.png}}
-        \only<3->{\includegraphics[width=\linewidth]{images/rdhonest_est_lee_M1.png}}
-        \only<4->{\includegraphics[width=\linewidth]{images/cases_rd.png}}                
+        \only<1>{\includegraphics[width=\linewidth]{images/rdplot_lee.png}}
+        \only<2>{\includegraphics[width=\linewidth]{images/rdrobust_est_lee.png}}
+        \only<3>{\includegraphics[width=\linewidth]{images/rdhonest_est_lee_M1.png}}
+        \only<4>{\includegraphics[width=\linewidth]{images/cases_rd.png}}                
       \end{column}%
     \end{columns}
 \end{frame}
