--- a/lectures/26_partial_identification.tex
+++ b/lectures/26_partial_identification.tex
@@ -388,7 +388,7 @@
             \item The solution is similar too
             \end{itemize}
           \item Under monotonicity of selection (
-            $S_{i}(1) \geq S_{i}(0)$, it is possible to provide sharp
+            $S_{i}(1) \geq S_{i}(0)$, it is possible to provide sharper
             bounds on the treatment effect
           \item Let $\tau = E(Y^{*}(1) - Y^{*}(0) | S(0) = 1, S(1) = 1)$, our estimand of interest, and $p_{0} = \frac{Pr(S = 1 | D = 1) - Pr(S = 1| D = 0)}{Pr(S = 1 | D = 1)}$ 
           \item Then, we can bound $\tau \in [\Delta_{0}^{LB}, \Delta_{0}^{UB}]$
